--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -53,7 +53,7 @@ jobs:
             --restore-path .github/workflows \
             --open-gh-issue \
             --from-version v4.5.2 \
-            --output-branch test-ai-update-test
+            --output-branch test-ai-update-test-202306
 
       # Create a compact patch (zero context) to keep requests small
       - name: Create patch of last commit
@@ -66,8 +66,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           set -euo pipefail
-          API="https://api.github.com/v1/copilot/chat/completions"  # Updated endpoint
-          HDRS=(-H "Accept: application/vnd.github.v3+json" \
+          API="https://models.github.ai/inference/chat/completions"
+          HDRS=(-H "Accept: application/json" \
                 -H "Authorization: Bearer $GITHUB_TOKEN" \
                 -H "Content-Type: application/json")
 
@@ -130,4 +130,6 @@ jobs:
       - name: Post comment to issue
         if: ${{ steps.find-issue.outputs.issue_number != '' }}
         env:
-          GH_TOKEN:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          gh issue comment "${{ steps.find-issue.outputs.issue_number }}" --body-file COMMENT.md
