--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -53,7 +53,7 @@ jobs:
             --restore-path .github/workflows \
             --open-gh-issue \
             --from-version v4.5.2 \
-            --output-branch test-ai-update-test-202306
+            --output-branch test-ai-update-test-202307
 
       # Create a compact patch (zero context) to keep requests small
       - name: Create patch of last commit
@@ -67,7 +67,8 @@ jobs:
         run: |
           set -euo pipefail
           API="https://models.github.ai/inference/chat/completions"
-          HDRS=(-H "Accept: application/json" \
+          # Fixed Accept header to resolve 400 error
+          HDRS=(-H "Accept: application/vnd.github.v3+json" \
                 -H "Authorization: Bearer $GITHUB_TOKEN" \
                 -H "Content-Type: application/json")
 
