--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,136 +1,113 @@
-name: Alpha Update
+name: Alpha Update (with AI summary)
+
 permissions:
   contents: write
   issues: write
-  metadata: read
+  pull-requests: write
+  models: read  # Necessary permission
 
 on:
   workflow_dispatch:
   schedule:
-    - cron: "0 0 * * 2"
+    - cron: "0 0 * * 2" # Every Tuesday at 00:00 UTC
 
 jobs:
   alpha-update:
     runs-on: ubuntu-latest
     env:
       GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      MODEL: openai/gpt-4o
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          fetch-depth: 0
+    - name: Checkout repository
+      uses: actions/checkout@v4
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
+        fetch-depth: 0
+    
+    - name: Set up Go
+      uses: actions/setup-go@v5
+      with:
+        go-version: stable
 
-      - name: Configure Git
-        run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+    - name: Configure Git
+      run: |
+        git config --local user.name "github-actions[bot]"
+        git config --local user.email "github-actions[bot]@users.noreply.github.com"
 
-      - name: Set up Go
-        uses: actions/setup-go@v5
-        with:
-          go-version: stable
+    - name: Install Kubebuilder
+      run: |
+        git clone --depth 1 --branch master \
+          https://github.com/kubernetes-sigs/kubebuilder.git /tmp/kubebuilder
+        cd /tmp/kubebuilder
+        make build
+        sudo cp bin/kubebuilder /usr/local/bin/
+        kubebuilder version
 
-      - name: Install Kubebuilder (master)
-        run: |
-          set -euxo pipefail
-          echo "$(go env GOPATH)/bin" >> "$GITHUB_PATH"
-          export PATH="$(go env GOPATH)/bin:$PATH"
-          if ! go install sigs.k8s.io/kubebuilder/v4/cmd/kubebuilder@master; then
-            git clone --depth 1 --branch master https://github.com/kubernetes-sigs/kubebuilder /tmp/kubebuilder
-            make -C /tmp/kubebuilder install
-          fi
-          kubebuilder version
+    - name: Run kubebuilder alpha update
+      run: |
+        kubebuilder alpha update \
+          --force \
+          --restore-path .github/workflows \
+          --push \
+          --output-branch test-ai-update-test-53 \
+          --from-version v4.5.2 \
+          --open-gh-issue
 
-      - name: Run kubebuilder alpha update
-        run: |
-          kubebuilder alpha update \
-            --force \
-            --push \
-            --restore-path .github/workflows \
-            --open-gh-issue \
-            --from-version v4.5.2 \
-            --output-branch test-ai-update-test-202307
+    - name: Create patch of last commit # Users may want to extract other info
+      run: |
+        git show HEAD > update.patch
 
-      # Create a compact patch (zero context) to keep requests small
-      - name: Create patch of last commit
-        run: |
-          git show --no-color --no-ext-diff --unified=0 HEAD > update.patch
+    - name: Prepare model prompt # Room for prompt engineering
+      run: |
+        cat > prompt.txt <<'EOF'
+        Start by stating that this summary is AI generated and can contain errors.
+        You are a concise update summarizer for an automated Kubebuilder scaffold update.
+        Analyze the patch and write a GitHub Issue comment that explains what changed.
+        Scan the patch for Git conflict markers (<<<<<<<, =======, >>>>>>>). For each conflict:
+        Explain what caused the conflict.
+        How to properly resolve them.
+        Inform the user about the recommended next steps.
+        Constraints: Markdown only, no raw diff snippets.
 
-      # Rolling (incremental) summarization to avoid 413s; YAML-safe (no tricky inline quotes)
-      - name: Generate summary with GitHub Models (rolling, 413-safe)
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          set -euo pipefail
-          API="https://models.github.ai/inference/chat/completions"
-          # Headers for GitHub Models API
-          HDRS=(-H "Accept: application/json" \
-                -H "Authorization: Bearer $GITHUB_TOKEN" \
-                -H "Content-Type: application/json")
+        ---- DIFF BELOW ----
+        EOF
+        cat update.patch >> prompt.txt
 
-          # Split the patch into small chunks
-          CHUNK_BYTES=${CHUNK_BYTES:-60000}
-          rm -f chunk_* response*.json COMMENT.md msg.txt || true
-          split -b "$CHUNK_BYTES" --additional-suffix=.txt -d -a 3 update.patch chunk_
-          if ! ls chunk_*.txt >/dev/null 2>&1; then cp update.patch chunk_000.txt; fi
+    - name: Generate summary with GitHub Models # Room for parameters tuning
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      run: |
+        set -o pipefail
+        jq -Rs '
+        {
+          model: "openai/gpt-4o",
+          messages: [
+            { "role": "user", "content": . }
+          ],
+          max_tokens: 4000,
+          temperature: 0
+        }' < prompt.txt \
+        | curl -sS https://models.github.ai/inference/chat/completions \
+            -H "Content-Type: application/json" \
+            -H "Authorization: Bearer $GITHUB_TOKEN" \
+            --data @- \
+        | jq -r '.choices[0].message.content' > COMMENT.md
 
-          summary="**AI-generated summary (may contain errors).**"
-          i=0
-          for f in $(ls -1 chunk_*.txt | sort); do
-            {
-              cat prompt.txt
-              echo
-              echo "Current summary:"
-              echo "<<<"
-              printf '%s\n' "$summary"
-              echo ">>>"
-              echo
-              echo "New diff chunk:"
-              echo "<<<"
-              cat "$f"
-              echo ">>>"
-            } > msg.txt
+    - name: Determine update issue number
+      id: find-issue
+      env:
+        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      run: |
+        out=$(gh issue list --state open --limit 100 --json number,title,createdAt)
+        issue_number=$(echo "$out" | jq -r '
+          sort_by(.createdAt)
+          | map(select(.title|test("^\\[Action Required\\] Upgrade the Scaffold: v[0-9.]+ -> v[0-9.]+$")))
+          | last.number // empty
+        ')
+        echo "issue_number=${issue_number}" >> "$GITHUB_OUTPUT"
 
-            body=$(jq -n --arg model "$MODEL" --rawfile content msg.txt \
-              '{ messages: [ { "role":"user", "content": $content } ],
-              max_tokens: 1200,
-              temperature: 0 }')
-          
-            curl -sS -L --fail-with-body "${HDRS[@]}" "$API" -d "$body" \
-            | tee "response_$i.json" >/dev/null
-
-            summary=$(jq -e -r '.choices[0].message.content // empty' "response_$i.json")
-            if [ -z "$summary" ]; then
-              echo "Empty response while updating summary (chunk $i). See response_$i.json:" >&2
-              cat "response_$i.json" >&2
-              exit 1
-            fi
-            i=$((i+1))
-          done
-
-          printf "%s\n" "$summary" > COMMENT.md
-          test -s COMMENT.md
-
-      - name: Determine update issue number
-        id: find-issue
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          out=$(gh issue list --state open --limit 100 --json number,title,createdAt)
-          issue_number=$(echo "$out" | jq -r '
-            sort_by(.createdAt)
-            | map(select(.title|test("^\\[Action Required\\] Upgrade the Scaffold: v[0-9.]+ -> v[0-9.]+$")))
-            | last.number // empty
-          ')
-          echo "issue_number=${issue_number}" >> "$GITHUB_OUTPUT"
-
-      - name: Post comment to issue
-        if: ${{ steps.find-issue.outputs.issue_number != '' }}
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          gh issue comment "${{ steps.find-issue.outputs.issue_number }}" --body-file COMMENT.md
+    - name: Post comment to issue
+      env:
+        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      run: |
+        gh issue comment "${{ steps.find-issue.outputs.issue_number }}" --body-file COMMENT.md
